--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" src="lazy.js"></script>
+    <script type="text/javascript" src="lazy.json.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
